logs/validate.20260408-051147.log
Mode: isolate
Isolate: including Chap19 Chap27 Chap02
error: unexpected token, expected `;`
   --> src/Chap27/ReduceContractMtEph.rs:213:13
    |
213 |             by {
    |             ^^

error[E0432]: unresolved import `crate::Chap27::ReduceContractMtEph::ReduceContractMtEph::contract_parallel`
  --> src/Chap27/ScanContractMtEph.rs:30:9
   |
30 |     use crate::Chap27::ReduceContractMtEph::ReduceContractMtEph::contract_parallel;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `contract_parallel` in `Chap27::ReduceContractMtEph::ReduceContractMtEph`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 25448MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
